@@ -33,6 +33,13 @@ Feature: Links
     | search_by |
     | href      |
     
+  Scenario: Support for multiple parameters
+    When I select a link labeled "Hello" and index "0"
+    Then the page should contain the text "Success"
+    Given I am on the static elements page
+    When I select a link labeled "Hello" and index "1"
+    Then the page should contain the text "Success"
+
   Scenario: Retrieve a Link
     When I retrieve a link element
     Then I should know it exists
