@@ -13,7 +13,7 @@ describe PageObject::Elements::SelectList do
     end
 
     it "should map selenium types to same" do
-      [:class, :id, :name, :xpath].each do |t|
+      [:class, :id, :name, :xpath, :index].each do |t|
         key, value = selectlist.selenium_identifier_for t => 'value'
         key.should == t
       end
